--- a/src/routes/styles/foundation/_variables.scss
+++ b/src/routes/styles/foundation/_variables.scss
@@ -10,8 +10,8 @@
 	--font-weight-semibold: 600;
 	--font-weight-normal: 400;
 	/* m: margin */
-	--m-vertical: 20px;
-	--m-horizontal: 16px;
+	--m-vertical: 1rem;
+	--m-horizontal: 0.8rem;
 
 	--scroll-bar-difference: 100vw - 100%;
 }
